<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Create_Account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="38dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="668dp"
        android:alpha=".6"
        android:text="@string/create_account"
        android:textSize="32dp"
        app:fontFamily="Helvetica"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/myRectangleView"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/rectangle"
        android:shadowColor="#00000033"
        android:shadowDx="6"
        android:shadowDy="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <View
        android:id="@+id/myRectangleView2"
        android:layout_width="306dp"
        android:layout_height="50dp"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/rectangle"
        android:shadowColor="#00000033"
        android:shadowDx="6"
        android:shadowDy="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name" />

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="85dp"
        android:width="148dp"
        android:text="@string/first_name"
        android:textSize="@dimen/text_size"
        app:fontFamily="Helvetica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enter_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:hint="@string/type_your_first_name"
        android:textColor="#0B0B0B65"
        android:textSize="18dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="27dp"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="209dp"
        android:text="@string/last_name"
        android:textSize="@dimen/text_size"
        app:fontFamily="Helvetica"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterlastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="13dp"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/type_your_last_name"
        android:textColor="#0B0B0B65"
        android:textSize="18dp"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView2" />


    <View
        android:id="@+id/buttonContinue"
        android:layout_width="360dp"
        android:layout_height="68dp"


        android:layout_marginTop="400dp"
        android:width="360dp"
        android:height="68dp"

        android:background="@drawable/rectangle"
        android:gravity="center"
        android:onClick="launchSecondActivity"
        android:text="@string/c_continue"

        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/c_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/but_continue"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonContinue" />




</androidx.constraintlayout.widget.ConstraintLayout>